# document-reader

./: clients.py  config.py  ingested_embeddings.jsonl  ingestion.py  main.py  pyproject.toml  qa_agent.py
agents/: .env.example  .gitignore  README.md  pyproject.toml
agents/agents_app/: __init__.py  clients.py  config.py  main.py
agents/agents_app/commands/: __init__.py  _shared.py  ask.py  ingest_confluence.py  ingest_swagger.py
agents/agents_app/ingestion/: __init__.py  chunking.py  metadata.py  storage.py
agents/agents_app/loaders/: __init__.py  confluence.py  swagger.py
agents/agents_app/qa/: __init__.py  agent.py  tools.py
api_call/: README.md  pyproject.toml
api_call/api_call_app/: __init__.py  clients.py  config.py  main.py
api_call/api_call_app/agent/: __init__.py  openapi_agent.py
api_call/api_call_app/loaders/: __init__.py  swagger.py
chroma_db/: chroma.sqlite3
commands/: __init__.py  _shared.py  ask.py  ingest_confluence.py  ingest_web.py
fire_crawl/: .env.example  .gitignore  main.py  pyproject.toml
ingestion/: __init__.py  metadata.py  storage.py  summarization.py
loaders/: __init__.py  confluence.py  web.py
new_approach/: .env.example  README.md  pyproject.toml
new_approach/journey_app/: __init__.py  clients.py  config.py  main.py
new_approach/journey_app/commands/: __init__.py  _shared.py  ingest_confluence.py  ingest_swagger.py  journey.py
new_approach/journey_app/ingestion/: __init__.py  chunking.py  metadata.py  storage.py
new_approach/journey_app/journey/: __init__.py  agent.py  tools.py
new_approach/journey_app/loaders/: __init__.py  confluence.py  github.py  jira.py  swagger.py
