[project]
name = "document-reader"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "python-dotenv>=1.2.2",
]

[project.scripts]
document-reader = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["config.py", "ingestion.py", "main.py", "qa_agent.py"]
