[project]
name = "agents"
version = "0.1.0"
description = "Multi-source ingestion (Confluence, Swagger/OpenAPI, with Jira and GitHub planned) into a Chroma vector store using LangChain."
requires-python = ">=3.12"
dependencies = [
    "atlassian-python-api>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "lxml>=5.0.0",
    "markdownify>=0.13.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
]

[project.scripts]
agents = "agents_app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents_app"]
