[project]
name = "api-call"
version = "0.1.0"
description = "OpenAPI-driven agent that ingests a Swagger spec and calls APIs on a user prompt."
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.17",
    "langchain-classic>=1.0.5",
    "langchain-community>=0.4.0",
    "langchain-openai>=1.2.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
]

[project.scripts]
api-call = "api_call_app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api_call_app"]
