[project]
name = "fire-crawl"
version = "0.1.0"
description = "Crawl websites with firecrawl-py and dump pages to disk."
requires-python = ">=3.12"
dependencies = [
    "firecrawl-py>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
fire-crawl = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
